Fix asking to save untitled empty doc on close

Remove all docs for which queryClose == true

BUG: 462347